--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,31 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="home-content" [fullscreen]="true">
+  <div class="container">
+    <h2>Bienvenida, {{ userName }} 👋</h2>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <div *ngIf="reportes.length === 0" class="empty-message">
+      Aún no hay avistamientos en tu zona 🌍
+    </div>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-card
+      *ngFor="let reporte of reportes"
+      class="fade-in"
+      [ngStyle]="{
+        borderLeft: '6px solid var(--ion-color-' + getColor(reporte.estado) + ')'
+      }"
+    >
+      <ion-card-header>
+        <ion-card-title>{{ reporte.titulo }}</ion-card-title>
+        <ion-card-subtitle>{{ reporte.fecha }}</ion-card-subtitle>
+      </ion-card-header>
+      <ion-chip color="{{ getColor(reporte.estado) }}">
+        {{ reporte.estado }}
+      </ion-chip>
+    </ion-card>
+
+    <ion-fab slot="fixed" vertical="bottom" horizontal="center">
+      <ion-fab-button routerLink="/nuevo-reporte">
+        <ion-icon name="add-outline"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
   </div>
 </ion-content>
