--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,9 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import '@ionic/angular/css/palettes/dark.system.css';
+@import "bootstrap-icons/font/bootstrap-icons.css";
+
+body {
+  background-color: #ffffff;
+  color: #000000;
+}
