--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,12 +3,13 @@
     <h2>Bienvenida, {{ userName }} 👋</h2>
 
     <div *ngIf="reportes.length === 0" class="empty-message">
-      Aún no hay avistamientos en tu zona 🌍
+      Aún no hay noticias en tu zona 🌿
     </div>
 
     <ion-card
       *ngFor="let reporte of reportes"
-      class="fade-in"
+      [routerLink]="['/detalle', reporte.id]"
+      class="card-noticia"
       [ngStyle]="{
         borderLeft: '6px solid var(--ion-color-' + getColor(reporte.estado) + ')'
       }"
@@ -21,11 +22,30 @@
         {{ reporte.estado }}
       </ion-chip>
     </ion-card>
+  </div>
 
-    <ion-fab slot="fixed" vertical="bottom" horizontal="center">
-      <ion-fab-button routerLink="/nuevo-reporte">
-        <ion-icon name="add-outline"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
+  <!-- Footer dentro del contenido para que no lo tape -->
+  <div class="bottom-nav">
+    <ion-toolbar>
+      <ion-grid>
+        <ion-row class="ion-justify-content-between ion-align-items-center">
+          <ion-col size="4" class="text-center">
+            <ion-button fill="clear" routerLink="/home">
+              <ion-icon name="home" slot="icon-only"></ion-icon>
+            </ion-button>
+          </ion-col>
+          <ion-col size="4" class="text-center">
+            <ion-button fill="clear">
+              <ion-icon name="camera" slot="icon-only"></ion-icon>
+            </ion-button>
+          </ion-col>
+          <ion-col size="4" class="text-center">
+            <ion-button fill="clear">
+              <ion-icon name="map" slot="icon-only"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-toolbar>
   </div>
 </ion-content>
